add ECCO json opportunity
